--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="page1Container">
+        <h1>Guess The Name :)</h1>
+            <p>Take a deep breath and guess name of them.</p>
+            <p>This will maybe enjoyable for you.</p>
+    <a href="page2.html">
+        <button type="button" class="btn btn-primary">Enter</button>
+    </a>
+    </div>
 </body>
 </html>
