html v1.2 css v1.1 done

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 </head>
 <body>
     <div class="page1Container">
-        <h1>Guess The Name :)</h1>
-            <p>Take a deep breath and guess name of them.</p>
-            <p>This will maybe enjoyable for you.</p>
-    <a href="page2.html">
-        <button type="button" class="btn btn-primary">Enter</button>
-    </a>
+        <h1>Guess The Name <span style="color: red">:)</span></h1>
+            <div class="page1Children">
+                <p>Take a deep breath and guess name of them.</p>
+                <p>This will maybe enjoyable for you.</p>
+            </div>
+            <div class="page1Button">
+                <a href="page2.html">
+                    <div class="button_slide slide_left">Enter </div>
+                </a>
+            </div>
     </div>
 </body>
 </html>
