html v1.3 css v1.2 done ~ previous option added

--- a/page2.html
+++ b/page2.html
@@ -10,26 +10,28 @@
 <body>
     <div class="main-container">
         <div class="inner-container">
-            <h2 class="question-title">Question</h2>
+            <h2 class="question">Question</h2>
+            <!-- <div class="img-container">Image</div> -->
             <ul>
                 <li>
                     <input type="radio" name="answer" id="ans1" class="answer">
-                    <label for="answer" id="option1"> Answer </label>
+                    <label for="ans1" id="option1"> Answer </label>
                 </li>
                 <li>
-                    <input type="radio" name="answer" id="ans1" class="answer">
-                    <label for="answer" id="option1"> Answer </label>
+                    <input type="radio" name="answer" id="ans2" class="answer">
+                    <label for="ans2" id="option2"> Answer </label>
                 </li>
                 <li>
-                    <input type="radio" name="answer" id="ans1" class="answer">
-                    <label for="answer" id="option1"> Answer </label>
+                    <input type="radio" name="answer" id="ans3" class="answer">
+                    <label for="ans3" id="option3"> Answer </label>
                 </li>
                 <li>
-                    <input type="radio" name="answer" id="ans1" class="answer">
-                    <label for="answer" id="option1"> Answer </label>
+                    <input type="radio" name="answer" id="ans4" class="answer">
+                    <label for="ans4" id="option4"> Answer </label>
                 </li>
             </ul>
             <button id="submit"> submit </button>
+            <button id="previous"> previous </button>
             <div id="showResult" class="resultArea"></div>
         </div>
     </div>
