home option added

--- a/page2.html
+++ b/page2.html
@@ -10,6 +10,9 @@
 <body>
     <div class="main-container">
         <div class="inner-container">
+            <div class="navbar">
+                <a href="index.html">Home</a>
+            </div>
             <h2 class="question">Question</h2>
             <!-- <div class="img-container">Image</div> -->
             <ul>
