--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
                 <a href="index.html">Home</a>
             </div>
             <h2 class="question">Question</h2>
-            <!-- <div class="img-container">Image</div> -->
+            <div class="img"></div>
             <ul>
                 <li>
                     <input type="radio" name="answer" id="ans1" class="answer">
